# UPF4ROS2

./: Dockerfile  README.md  upf.repos
.github/workflows/: main.yaml
data/: demo_complex_integrated_upf.csv  demo_complex_integrated_upf4ros2.csv  demo_complex_pddlfile_upf.csv  demo_complex_pddlfile_upf4ros2.csv  metrics_demos.csv  metrics_demos.md  overhead_breakdown_raw.csv  overhead_breakdown_summary.csv  raw_results.csv
data/plansys2_replanning_cases/: plansys2_replanning_cases_descriptive_summary.csv  plansys2_replanning_cases_planning_time_statistics.csv  plansys2_replanning_cases_valid_runs.csv  summary.md
data/plansys2_replanning_cases/native/: run_20260602_134748_events.jsonl  run_20260602_134748_summary.json  run_20260602_135512_events.jsonl  run_20260602_135512_summary.json  run_20260602_135837_events.jsonl  run_20260602_135837_summary.json  run_20260602_140125_events.jsonl  run_20260602_140125_summary.json  run_20260602_140345_events.jsonl  run_20260602_140345_summary.json  run_20260602_140658_events.jsonl  run_20260602_140658_summary.json  run_20260602_140929_events.jsonl  run_20260602_140929_summary.json  (+26 more)
docs/: Doxyfile  README.md
plansys2_upf_plan_solver/: CMakeLists.txt  README.md  package.xml  plansys2_upf_plan_solver_plugin.xml
plansys2_upf_plan_solver/include/plansys2_upf_plan_solver/: upf_plan_solver.hpp
plansys2_upf_plan_solver/src/plansys2_upf_plan_solver/: upf_plan_solver.cpp
plansys2_upf_plan_solver/test/pddl/: domain_simple.pddl
plansys2_upf_plan_solver/test/unit/: CMakeLists.txt  upf_test.cpp
upf4ros2/: package.xml  setup.cfg  setup.py
upf4ros2/launch/: upf4ros2.launch.py
upf4ros2/test/: test_conversion.py  test_upf4ros2.py
upf4ros2/tests/: test_conversion.py  test_upf4ros2.py
upf4ros2/upf4ros2/: converter.py  ros2_interface_reader.py  ros2_interface_writer.py  ros2_utils.py  upf4ros2_main.py
upf4ros2_demo/: package.xml  setup.cfg  setup.py
upf4ros2_demo/launch/: plansys2_replanning_cases.launch.py  plansys2_replanning_native.launch.py  plansys2_replanning_upf4ros2.launch.py  qgiswindow.launch.py  roswrap.launch.py  solve_example.launch.py  traverse_areas.launch.py  upf4ros2_demo.launch.py  upf4ros2_demo1.launch.py  upf4ros2_demo1_bash.launch.py  upf4ros2_demo1_pddlfile.launch.py  upf4ros2_demo2.launch.py  upf4ros2_demo3.launch.py  upf4ros2_demo3_harvest.launch.py  upf4ros2_demo3_replan.launch.py  upf4ros2_pddlfile.launch.py  upf4ros2_plan.launch.py
upf4ros2_demo/params/: generated_uav_instance.pddl  house.yaml  lookupTable.json  lookupTable.jsonZone.Identifier  lookupTable.yaml
upf4ros2_demo/pddl/: generated_uav_instance.pddl  monitor_domain.pddl  uav_domain.pddl
upf4ros2_demo/resource/: upf_problem.sh
upf4ros2_demo/upf4ros2_demo/: navigation_action_client.py  pddl_from_sg.py  plan_executor.py  plansys2_replanning_cases_demo.py  qgis_window.py  sg_roswrap.py  upf4ros2_check_wp_action.py  upf4ros2_collect_action.py  upf4ros2_demo1.py  upf4ros2_demo1_bash.py  upf4ros2_demo1_pddl.py  upf4ros2_demo2.py  upf4ros2_demo3.py  upf4ros2_demo3_harvest.py  upf4ros2_demo3_replan.py  upf4ros2_demo_navigate.py  upf4ros2_demo_tamer_integrated_node.py  upf4ros2_navigation_action.py  upf4ros2_pddlfile.py  upf4ros2_plan.py
upf4ros2_demo_interfaces/: CMakeLists.txt  package.xml
upf4ros2_demo_interfaces/srv/: CallAction.srv
upf4ros2_demo_msgs/: CMakeLists.txt  package.xml
upf4ros2_demo_msgs/action/: Mission.action
upf4ros2_demo_msgs/srv/: CallAction.srv
upf_msgs/: CMakeLists.txt  package.xml
upf_msgs/action/: PDDLPlanOneShot.action  PlanOneShot.action  PlanOneShotRemote.action
upf_msgs/msg/: AbstractTaskDeclaration.msg  Action.msg  ActionInstance.msg  Assignment.msg  Atom.msg  CompilerResult.msg  Condition.msg  Duration.msg  DurativeAction.msg  Effect.msg  EffectExpression.msg  Expression.msg  ExpressionItem.msg  Fluent.msg  Goal.msg  GoalWithCost.msg  Hierarchy.msg  InstantaneousAction.msg  Interval.msg  LogMessage.msg  Method.msg  Metric.msg  ObjectDeclaration.msg  PDDLPlanRequest.msg  Parameter.msg  Plan.msg  PlanGenerationResult.msg  PlanRequest.msg  PlanRequestRemote.msg  Problem.msg  Real.msg  Schedule.msg  Task.msg  TaskNetwork.msg  TimedAction.msg  TimedEffect.msg  TimedFluent.msg  Timepoint.msg  Timing.msg  TypeDeclaration.msg  (+4 more)
upf_msgs/srv/: AddAction.srv  AddFluent.srv  AddGoal.srv  AddObject.srv  AddProblem.srv  GetProblem.srv  NewProblem.srv  PDDLPlanOneShot.srv  PlanOneShot.srv  Replan.srv  SetInitialValue.srv  SetProblem.srv
(+69 files in other folders)
